# userservice

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  build.rs
.github/workflows/: docker-publish.yml
migrations/2021-08-27-065223_create_bppusers/: down.sql  up.sql
migrations/2021-08-29-181916_create_groups_and_ranks/: down.sql  up.sql
migrations/2021-09-06-184606_group_sorting/: down.sql  up.sql
migrations/2021-09-07-184105_money_to_real/: down.sql  up.sql
src/: log.rs  macros.rs  models.rs  schema.rs  server.rs  settings.rs
