[package]
name = "userservice"
version = "0.1.0"
authors = ["cozyGalvinism <reallifejunkies@googlemail.com>"]
edition = "2018"

[[bin]]
name = "userservice-server"
path = "src/server.rs"

[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
prost-types = "0.8"
tokio-stream = "0.1"
async-stream = "0.2"
fern = { version = "0.6.0", features = ["syslog-4", "colored"] }
syslog = "^4.0.1"
log = "0.4"
chrono = "0.4.19"
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
r2d2 = "0.8.9"

[build-dependencies]
tonic-build = "0.5"