[package]
name = "userservice"
version = "0.1.0"
authors = ["cozyGalvinism <reallifejunkies@googlemail.com>"]
edition = "2018"

[[bin]]
name = "userservice-server"
path = "src/server.rs"

[dependencies]
tonic = "0.5.2"
prost = "0.8.0"
tokio = { version = "1.10.1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
rand = "0.8.4"
prost-types = "0.8.0"
tokio-stream = "0.1.7"
async-stream = "0.3.2"
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
chrono = "0.4.19"
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
r2d2 = "0.8.9"
config = { version = "0.11.0", features = ["toml"] }
toml = "0.5.8"

[build-dependencies]
tonic-build = "0.5.2"